Minor bugfixes ide

--- a/ide/config.ini
+++ b/ide/config.ini
@@ -1,9 +1,9 @@
-[Editor]
-tab length = 3
-
 [Paths]
-fpl theories = 
+fpl theories = D:/Forschung/PyCharm/fpl/poc/theories
+
+[Editor]
+tab length = 4
 
 [Code Reformatting]
-one-line compound predicates = True
+one-line compound predicates = False
 
