fpl interpreter version 1.4.10 (see poc/CHANGES.md)

--- a/ide/config.ini
+++ b/ide/config.ini
@@ -5,5 +5,5 @@ fpl theories = ../poc/theories
 tab length = 4
 
 [Code Reformatting]
-one-line compound predicates = False
+one-line compound predicates = True
 
